completes merge of PR code