@@ -2,7 +2,11 @@ package com.bitquest.bitquest;
 
 import java.io.*;
 import java.net.*;
+import java.util.Base64;
 import org.bukkit.Bukkit;
+import org.bukkit.Material;
+import org.bukkit.entity.Player;
+import org.bukkit.inventory.ItemStack;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
@@ -36,282 +40,291 @@ public class Wallet {
   public Wallet(BitQuest plugin, String account_id) {
     this.account_id = account_id;
     this.bitQuest = plugin;
-    getAccountAddress(
-        new GetAccountAddressCallback() {
-          @Override
-          public void run(String accountAddress) {
-            address = accountAddress;
-          }
-        });
+    if(this.bitQuest.BITCOIN_NODE_HOST!=null) {
+      getAccountAddress(
+              new GetAccountAddressCallback() {
+                @Override
+                public void run(String accountAddress) {
+                  address = accountAddress;
+                }
+              });
+    }
+
   }
 
   public void getBalance(int confirmations, final GetBalanceCallback callback) {
     final String account_id = this.account_id;
     System.out.println(account_id);
     Bukkit.getScheduler()
-        .runTaskAsynchronously(
-            bitQuest,
-            new Runnable() {
-              @Override
-              public void run() {
-                try {
-                  JSONParser parser = new JSONParser();
-                  final JSONObject jsonObject = new JSONObject();
-                  jsonObject.put("jsonrpc", "1.0");
-                  jsonObject.put("id", "bitquest");
-                  jsonObject.put("method", "getbalance");
-                  JSONArray params = new JSONArray();
-                  params.add(account_id);
-                  params.add(confirmations);
-                  if (bitQuest.BITQUEST_ENV == "development")
-                    System.out.println("[getbalance] " + account_id + " " + confirmations);
-                  jsonObject.put("params", params);
-                  URL url =
-                      new URL(
-                          "http://"
-                              + BitQuest.BITCOIN_NODE_HOST
-                              + ":"
-                              + BitQuest.BITCOIN_NODE_PORT);
-                  HttpURLConnection con = (HttpURLConnection) url.openConnection();
-                  con.setConnectTimeout(5000);
-                  String userPassword =
-                      BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
-                  String encoding = new sun.misc.BASE64Encoder().encode(userPassword.getBytes());
-                  con.setRequestProperty("Authorization", "Basic " + encoding);
+            .runTaskAsynchronously(
+                    bitQuest,
+                    new Runnable() {
+                      @Override
+                      public void run() {
+                        try {
+                          JSONParser parser = new JSONParser();
+                          final JSONObject jsonObject = new JSONObject();
+                          jsonObject.put("jsonrpc", "1.0");
+                          jsonObject.put("id", "bitquest");
+                          jsonObject.put("method", "getbalance");
+                          JSONArray params = new JSONArray();
+                          params.add(account_id);
+                          params.add(confirmations);
+                          if (bitQuest.BITQUEST_ENV == "development")
+                            System.out.println("[getbalance] " + account_id + " " + confirmations);
+                          jsonObject.put("params", params);
+                          URL url =
+                                  new URL(
+                                          "http://"
+                                                  + BitQuest.BITCOIN_NODE_HOST
+                                                  + ":"
+                                                  + BitQuest.BITCOIN_NODE_PORT);
+                          HttpURLConnection con = (HttpURLConnection) url.openConnection();
+                          con.setConnectTimeout(5000);
+                          String userPassword =
+                                  BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
+                          String encoding = Base64.getEncoder().encodeToString(userPassword.getBytes());
+                          con.setRequestProperty("Authorization", "Basic " + encoding);
 
-                  con.setRequestMethod("POST");
-                  con.setRequestProperty(
-                      "User-Agent", "Mozilla/1.22 (compatible; MSIE 2.0; Windows 3.1)");
-                  con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
-                  con.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
-                  con.setDoOutput(true);
-                  OutputStreamWriter out = new OutputStreamWriter(con.getOutputStream());
-                  out.write(jsonObject.toString());
-                  out.close();
+                          con.setRequestMethod("POST");
+                          con.setRequestProperty(
+                                  "User-Agent", "Mozilla/1.22 (compatible; MSIE 2.0; Windows 3.1)");
+                          con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
+                          con.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
+                          con.setDoOutput(true);
+                          OutputStreamWriter out = new OutputStreamWriter(con.getOutputStream());
+                          out.write(jsonObject.toString());
+                          out.close();
 
-                  int responseCode = con.getResponseCode();
+                          int responseCode = con.getResponseCode();
 
-                  BufferedReader in =
-                      new BufferedReader(new InputStreamReader(con.getInputStream()));
-                  String inputLine;
-                  StringBuffer response = new StringBuffer();
+                          BufferedReader in =
+                                  new BufferedReader(new InputStreamReader(con.getInputStream()));
+                          String inputLine;
+                          StringBuffer response = new StringBuffer();
 
-                  while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
-                  }
-                  in.close();
-                  JSONObject response_object = (JSONObject) parser.parse(response.toString());
-                  Double d =
-                      Double.parseDouble(response_object.get("result").toString().trim())
-                          * 100000000L;
+                          while ((inputLine = in.readLine()) != null) {
+                            response.append(inputLine);
+                          }
+                          in.close();
+                          JSONObject response_object = (JSONObject) parser.parse(response.toString());
+                          Double d =
+                                  Double.parseDouble(response_object.get("result").toString().trim())
+                                          * 100000000L;
 
-                  if (bitQuest.BITQUEST_ENV == "development") System.out.println(response_object);
-                  final Long balance = d.longValue();
-                  Bukkit.getScheduler()
-                      .runTask(
-                          bitQuest,
-                          new Runnable() {
-                            @Override
-                            public void run() {
-                              callback.run(balance);
-                            }
-                          });
-                } catch (IOException e) {
-                  System.out.println("Error on getBalance");
-                  e.printStackTrace();
-                } catch (ParseException e) {
-                  System.out.println("Error on getBalance");
-                  e.printStackTrace();
-                }
-              }
-            });
+                          if (bitQuest.BITQUEST_ENV == "development") System.out.println(response_object);
+                          final Long balance = d.longValue();
+                          Bukkit.getScheduler()
+                                  .runTask(
+                                          bitQuest,
+                                          new Runnable() {
+                                            @Override
+                                            public void run() {
+                                              callback.run(balance);
+                                            }
+                                          });
+                        } catch (IOException e) {
+                          System.out.println("Error on getBalance");
+                          e.printStackTrace();
+                        } catch (ParseException e) {
+                          System.out.println("Error on getBalance");
+                          e.printStackTrace();
+                        }
+                      }
+                    });
   }
 
   void getAccountAddress(final GetAccountAddressCallback callback) {
     Bukkit.getScheduler()
-        .runTaskAsynchronously(
-            bitQuest,
-            new Runnable() {
-              @Override
-              public void run() {
-                try {
-                  JSONParser parser = new JSONParser();
+            .runTaskAsynchronously(
+                    bitQuest,
+                    new Runnable() {
+                      @Override
+                      public void run() {
+                        if(bitQuest.BITCOIN_NODE_HOST!=null) {
+                          try {
+                            JSONParser parser = new JSONParser();
 
-                  final JSONObject jsonObject = new JSONObject();
-                  jsonObject.put("jsonrpc", "1.0");
-                  jsonObject.put("id", "bitquest");
-                  jsonObject.put("method", "getaccountaddress");
-                  JSONArray params = new JSONArray();
-                  params.add(account_id);
-                  if (bitQuest.BITQUEST_ENV == "development")
-                    System.out.println("[getaccountaddress] " + account_id);
-                  jsonObject.put("params", params);
-                  URL url =
-                      new URL(
-                          "http://"
-                              + BitQuest.BITCOIN_NODE_HOST
-                              + ":"
-                              + BitQuest.BITCOIN_NODE_PORT);
-                  HttpURLConnection con = (HttpURLConnection) url.openConnection();
-                  String userPassword =
-                      BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
-                  String encoding = new sun.misc.BASE64Encoder().encode(userPassword.getBytes());
-                  con.setRequestProperty("Authorization", "Basic " + encoding);
-                  con.setConnectTimeout(5000);
-                  con.setRequestMethod("POST");
-                  con.setRequestProperty(
-                      "User-Agent", "Mozilla/1.22 (compatible; MSIE 2.0; Windows 3.1)");
-                  con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
-                  con.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
-                  con.setDoOutput(true);
-                  OutputStreamWriter out = new OutputStreamWriter(con.getOutputStream());
-                  out.write(jsonObject.toString());
-                  out.close();
+                            final JSONObject jsonObject = new JSONObject();
+                            jsonObject.put("jsonrpc", "1.0");
+                            jsonObject.put("id", "bitquest");
+                            jsonObject.put("method", "getaccountaddress");
+                            JSONArray params = new JSONArray();
+                            params.add(account_id);
+                            if (bitQuest.BITQUEST_ENV == "development")
+                              System.out.println("[getaccountaddress] " + account_id);
+                            jsonObject.put("params", params);
+                            URL url =
+                                    new URL(
+                                            "http://"
+                                                    + BitQuest.BITCOIN_NODE_HOST
+                                                    + ":"
+                                                    + BitQuest.BITCOIN_NODE_PORT);
+                            HttpURLConnection con = (HttpURLConnection) url.openConnection();
+                            String userPassword =
+                                    BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
+                            String encoding = Base64.getEncoder().encodeToString(userPassword.getBytes());
+                            con.setRequestProperty("Authorization", "Basic " + encoding);
+                            con.setConnectTimeout(5000);
+                            con.setRequestMethod("POST");
+                            con.setRequestProperty(
+                                    "User-Agent", "Mozilla/1.22 (compatible; MSIE 2.0; Windows 3.1)");
+                            con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
+                            con.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
+                            con.setDoOutput(true);
+                            OutputStreamWriter out = new OutputStreamWriter(con.getOutputStream());
+                            out.write(jsonObject.toString());
+                            out.close();
 
-                  int responseCode = con.getResponseCode();
+                            int responseCode = con.getResponseCode();
 
-                  BufferedReader in =
-                      new BufferedReader(new InputStreamReader(con.getInputStream()));
-                  String inputLine;
-                  StringBuffer response = new StringBuffer();
+                            BufferedReader in =
+                                    new BufferedReader(new InputStreamReader(con.getInputStream()));
+                            String inputLine;
+                            StringBuffer response = new StringBuffer();
 
-                  while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
-                  }
-                  in.close();
-                  JSONObject response_object = (JSONObject) parser.parse(response.toString());
-                  if (bitQuest.BITQUEST_ENV == "development") System.out.println(response_object);
-                  callback.run(response_object.get("result").toString());
-                } catch (Exception e) {
-                  System.out.println("Error on getAccountAddress");
-                  e.printStackTrace();
-                }
-              }
-            });
+                            while ((inputLine = in.readLine()) != null) {
+                              response.append(inputLine);
+                            }
+                            in.close();
+                            JSONObject response_object = (JSONObject) parser.parse(response.toString());
+                            if (bitQuest.BITQUEST_ENV == "development") System.out.println(response_object);
+                            callback.run(response_object.get("result").toString());
+                          } catch (Exception e) {
+                            System.out.println("Error on getAccountAddress");
+                            e.printStackTrace();
+                          }
+                        } else {
+                          // use emeralds as currency (EXPERIMENTAL)
+                          callback.run(account_id);
+                        }
+
+                      }
+                    });
   }
 
   void addWitnessAddress(String address, final AddWitnessAddressCallback callback) {
     Bukkit.getScheduler()
-        .runTaskAsynchronously(
-            bitQuest,
-            new Runnable() {
-              @Override
-              public void run() {
-                try {
-                  JSONParser parser = new JSONParser();
+            .runTaskAsynchronously(
+                    bitQuest,
+                    new Runnable() {
+                      @Override
+                      public void run() {
+                        try {
+                          JSONParser parser = new JSONParser();
 
-                  final JSONObject jsonObject = new JSONObject();
-                  jsonObject.put("jsonrpc", "1.0");
-                  jsonObject.put("id", "bitquest");
-                  jsonObject.put("method", "addwitnessaddress");
-                  JSONArray params = new JSONArray();
-                  params.add(address);
+                          final JSONObject jsonObject = new JSONObject();
+                          jsonObject.put("jsonrpc", "1.0");
+                          jsonObject.put("id", "bitquest");
+                          jsonObject.put("method", "addwitnessaddress");
+                          JSONArray params = new JSONArray();
+                          params.add(address);
 
-                  jsonObject.put("params", params);
-                  URL url =
-                      new URL(
-                          "http://"
-                              + BitQuest.BITCOIN_NODE_HOST
-                              + ":"
-                              + BitQuest.BITCOIN_NODE_PORT);
-                  HttpURLConnection con = (HttpURLConnection) url.openConnection();
-                  String userPassword =
-                      BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
-                  String encoding = new sun.misc.BASE64Encoder().encode(userPassword.getBytes());
-                  con.setRequestProperty("Authorization", "Basic " + encoding);
-                  con.setConnectTimeout(5000);
-                  con.setRequestMethod("POST");
-                  con.setRequestProperty(
-                      "User-Agent", "Mozilla/1.22 (compatible; MSIE 2.0; Windows 3.1)");
-                  con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
-                  con.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
-                  con.setDoOutput(true);
-                  OutputStreamWriter out = new OutputStreamWriter(con.getOutputStream());
-                  out.write(jsonObject.toString());
-                  out.close();
+                          jsonObject.put("params", params);
+                          URL url =
+                                  new URL(
+                                          "http://"
+                                                  + BitQuest.BITCOIN_NODE_HOST
+                                                  + ":"
+                                                  + BitQuest.BITCOIN_NODE_PORT);
+                          HttpURLConnection con = (HttpURLConnection) url.openConnection();
+                          String userPassword =
+                                  BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
+                          String encoding = Base64.getEncoder().encodeToString(userPassword.getBytes());
+                          con.setRequestProperty("Authorization", "Basic " + encoding);
+                          con.setConnectTimeout(5000);
+                          con.setRequestMethod("POST");
+                          con.setRequestProperty(
+                                  "User-Agent", "Mozilla/1.22 (compatible; MSIE 2.0; Windows 3.1)");
+                          con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
+                          con.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
+                          con.setDoOutput(true);
+                          OutputStreamWriter out = new OutputStreamWriter(con.getOutputStream());
+                          out.write(jsonObject.toString());
+                          out.close();
 
-                  int responseCode = con.getResponseCode();
+                          int responseCode = con.getResponseCode();
 
-                  BufferedReader in =
-                      new BufferedReader(new InputStreamReader(con.getInputStream()));
-                  String inputLine;
-                  StringBuffer response = new StringBuffer();
+                          BufferedReader in =
+                                  new BufferedReader(new InputStreamReader(con.getInputStream()));
+                          String inputLine;
+                          StringBuffer response = new StringBuffer();
 
-                  while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
-                  }
-                  in.close();
-                  JSONObject response_object = (JSONObject) parser.parse(response.toString());
-                  if (bitQuest.BITQUEST_ENV == "development") System.out.println(response_object);
-                  callback.run(response_object.get("result").toString());
-                } catch (Exception e) {
-                  System.out.println("[addwitnessaddress] fail");
-                  e.printStackTrace();
-                }
-              }
-            });
+                          while ((inputLine = in.readLine()) != null) {
+                            response.append(inputLine);
+                          }
+                          in.close();
+                          JSONObject response_object = (JSONObject) parser.parse(response.toString());
+                          if (bitQuest.BITQUEST_ENV == "development") System.out.println(response_object);
+                          callback.run(response_object.get("result").toString());
+                        } catch (Exception e) {
+                          System.out.println("[addwitnessaddress] fail");
+                          e.printStackTrace();
+                        }
+                      }
+                    });
   }
 
   void setAccount(String address, final SetAccountCallback callback) {
     Bukkit.getScheduler()
-        .runTaskAsynchronously(
-            bitQuest,
-            new Runnable() {
-              @Override
-              public void run() {
-                try {
-                  JSONParser parser = new JSONParser();
-                  final JSONObject jsonObject = new JSONObject();
-                  jsonObject.put("jsonrpc", "1.0");
-                  jsonObject.put("id", "bitquest");
-                  jsonObject.put("method", "setaccount");
-                  JSONArray params = new JSONArray();
-                  params.add(address);
-                  params.add(account_id);
+            .runTaskAsynchronously(
+                    bitQuest,
+                    new Runnable() {
+                      @Override
+                      public void run() {
+                        try {
+                          JSONParser parser = new JSONParser();
+                          final JSONObject jsonObject = new JSONObject();
+                          jsonObject.put("jsonrpc", "1.0");
+                          jsonObject.put("id", "bitquest");
+                          jsonObject.put("method", "setaccount");
+                          JSONArray params = new JSONArray();
+                          params.add(address);
+                          params.add(account_id);
 
-                  jsonObject.put("params", params);
-                  URL url =
-                      new URL(
-                          "http://"
-                              + BitQuest.BITCOIN_NODE_HOST
-                              + ":"
-                              + BitQuest.BITCOIN_NODE_PORT);
-                  HttpURLConnection con = (HttpURLConnection) url.openConnection();
-                  String userPassword =
-                      BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
-                  String encoding = new sun.misc.BASE64Encoder().encode(userPassword.getBytes());
-                  con.setRequestProperty("Authorization", "Basic " + encoding);
-                  con.setConnectTimeout(5000);
-                  con.setRequestMethod("POST");
-                  con.setRequestProperty(
-                      "User-Agent", "Mozilla/1.22 (compatible; MSIE 2.0; Windows 3.1)");
-                  con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
-                  con.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
-                  con.setDoOutput(true);
-                  OutputStreamWriter out = new OutputStreamWriter(con.getOutputStream());
-                  out.write(jsonObject.toString());
-                  out.close();
+                          jsonObject.put("params", params);
+                          URL url =
+                                  new URL(
+                                          "http://"
+                                                  + BitQuest.BITCOIN_NODE_HOST
+                                                  + ":"
+                                                  + BitQuest.BITCOIN_NODE_PORT);
+                          HttpURLConnection con = (HttpURLConnection) url.openConnection();
+                          String userPassword =
+                                  BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
+                          String encoding = Base64.getEncoder().encodeToString(userPassword.getBytes());
+                          con.setRequestProperty("Authorization", "Basic " + encoding);
+                          con.setConnectTimeout(5000);
+                          con.setRequestMethod("POST");
+                          con.setRequestProperty(
+                                  "User-Agent", "Mozilla/1.22 (compatible; MSIE 2.0; Windows 3.1)");
+                          con.setRequestProperty("Accept-Language", "en-US,en;q=0.5");
+                          con.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
+                          con.setDoOutput(true);
+                          OutputStreamWriter out = new OutputStreamWriter(con.getOutputStream());
+                          out.write(jsonObject.toString());
+                          out.close();
 
-                  int responseCode = con.getResponseCode();
+                          int responseCode = con.getResponseCode();
 
-                  BufferedReader in =
-                      new BufferedReader(new InputStreamReader(con.getInputStream()));
-                  String inputLine;
-                  StringBuffer response = new StringBuffer();
+                          BufferedReader in =
+                                  new BufferedReader(new InputStreamReader(con.getInputStream()));
+                          String inputLine;
+                          StringBuffer response = new StringBuffer();
 
-                  while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
-                  }
-                  in.close();
-                  JSONObject response_object = (JSONObject) parser.parse(response.toString());
-                  if (bitQuest.BITQUEST_ENV == "development") System.out.println(response_object);
-                  callback.run(true);
-                } catch (Exception e) {
-                  System.out.println("[setaccount] error");
-                  e.printStackTrace();
-                }
-              }
-            });
+                          while ((inputLine = in.readLine()) != null) {
+                            response.append(inputLine);
+                          }
+                          in.close();
+                          JSONObject response_object = (JSONObject) parser.parse(response.toString());
+                          if (bitQuest.BITQUEST_ENV == "development") System.out.println(response_object);
+                          callback.run(true);
+                        } catch (Exception e) {
+                          System.out.println("[setaccount] error");
+                          e.printStackTrace();
+                        }
+                      }
+                    });
   }
 
   public boolean move(String to, Long sat) throws IOException, ParseException {
@@ -333,7 +346,7 @@ public class Wallet {
       URL url = new URL("http://" + BitQuest.BITCOIN_NODE_HOST + ":" + BitQuest.BITCOIN_NODE_PORT);
       HttpURLConnection con = (HttpURLConnection) url.openConnection();
       String userPassword = BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
-      String encoding = new sun.misc.BASE64Encoder().encode(userPassword.getBytes());
+      String encoding = Base64.getEncoder().encodeToString(userPassword.getBytes());
       con.setRequestProperty("Authorization", "Basic " + encoding);
       con.setConnectTimeout(5000);
       con.setRequestMethod("POST");
@@ -360,15 +373,15 @@ public class Wallet {
       return (boolean) response_object.get("result");
     } else {
       System.out.println(
-          "[move] "
-              + this.account_id
-              + "-> "
-              + sat
-              + " --> "
-              + to
-              + ": FAIL (must be between 100 & "
-              + Long.MAX_VALUE
-              + ")");
+              "[move] "
+                      + this.account_id
+                      + "-> "
+                      + sat
+                      + " --> "
+                      + to
+                      + ": FAIL (must be between 100 & "
+                      + Long.MAX_VALUE
+                      + ")");
       return false;
     }
   }
@@ -395,7 +408,7 @@ public class Wallet {
     System.out.println(url.toString());
     HttpURLConnection con = (HttpURLConnection) url.openConnection();
     String userPassword = BitQuest.BITCOIN_NODE_USERNAME + ":" + BitQuest.BITCOIN_NODE_PASSWORD;
-    String encoding = new sun.misc.BASE64Encoder().encode(userPassword.getBytes());
+    String encoding = Base64.getEncoder().encodeToString(userPassword.getBytes());
     con.setRequestProperty("Authorization", "Basic " + encoding);
 
     con.setRequestMethod("POST");
@@ -433,4 +446,84 @@ public class Wallet {
       return "live.blockcypher.com/btc/address/" + address;
     }
   }
+
+  public static int countEmeralds(Player player) {
+
+    ItemStack[] items = player.getInventory().getContents();
+    int amount = 0;
+    for (int i=0; i<player.getInventory().getSize(); i++) {
+      ItemStack TempStack = items[i];
+      if ((TempStack != null) && (TempStack.getType() != Material.AIR)){
+        if (TempStack.getType().toString() == "EMERALD_BLOCK") {
+          amount += (TempStack.getAmount()*9);
+        }
+        else if (TempStack.getType().toString() == "EMERALD") {
+          amount += TempStack.getAmount();
+        }
+      }
+    }
+    return amount;
+  }//end count emerald in player inventory by @bitcoinjake09
+  public boolean removeEmeralds(Player player,int amount){
+    int EmCount = countEmeralds(player);
+    int LessEmCount = countEmeralds(player)-amount;
+    double TempAmount=(double)amount;
+    int EmsBack=0;
+    ItemStack[] items = player.getInventory().getContents();
+    if (countEmeralds(player)>=amount){
+      while(TempAmount>0){
+        for (int i=0; i<player.getInventory().getSize(); i++) {
+          ItemStack TempStack = items[i];
+
+          if ((TempStack != null) && (TempStack.getType() != Material.AIR)){
+
+            if ((TempStack.getType().toString() == "EMERALD_BLOCK")&&(TempAmount>=9)) {
+              player.getInventory().removeItem(new ItemStack(Material.EMERALD_BLOCK, 1));
+              TempAmount=TempAmount-9;
+            }
+            if ((TempStack.getType().toString() == "EMERALD_BLOCK")&&(TempAmount<9)) {
+              player.getInventory().removeItem(new ItemStack(Material.EMERALD_BLOCK, 1));
+              EmsBack=(9-(int)TempAmount);  //if 8, ems back = 1
+              TempAmount=TempAmount-TempAmount;
+              if (EmsBack>0) {player.getInventory().addItem(new ItemStack(Material.EMERALD, EmsBack));}
+            }
+            if ((TempStack.getType().toString() == "EMERALD")&&(TempAmount>=1)) {
+              player.getInventory().removeItem(new ItemStack(Material.EMERALD, 1));
+              TempAmount=TempAmount-1;
+            }
+
+          }//end if != Material.AIR
+
+
+        }// end for loop
+      }//end while loop
+    }//end (EmCount>=amount)
+    EmCount = countEmeralds(player);
+    if ((EmCount==LessEmCount)||(TempAmount==0))
+      return true;
+    return false;
+  }//end of remove emeralds
+  //start addemeralds to inventory
+  public boolean addEmeralds(Player player,int amount){
+    int EmCount = countEmeralds(player);
+    int moreEmCount = countEmeralds(player)+amount;
+    double bits = (double)amount;
+    double TempAmount=(double)amount;
+    int EmsBack=0;
+    while(TempAmount>=0){
+      if (TempAmount>=9){
+        TempAmount=TempAmount-9;
+        player.getInventory().addItem(new ItemStack(Material.EMERALD_BLOCK, 1));
+      }
+      if (TempAmount<9){
+        TempAmount=TempAmount-1;
+        player.getInventory().addItem(new ItemStack(Material.EMERALD, 1));
+      }
+      EmCount = countEmeralds(player);
+      if ((EmCount==moreEmCount))
+        return true;
+    }//end while loop
+    return false;
+  }
+
 }
